<resources>
    <!-- VM http://10.0.2.2/ -->
    <!-- HOME SERVER http://27.32.135.35/Securify/ -->
    <string name="ServerURI">http://27.32.135.35/Securify/</string>
    <string name="googleAPICredetialServer">AIzaSyBs1XJE34XAi6oy4x-1EkI4-fBOtBnTzAM</string>

    <string name="jobActivity_Ex">jobActivity/</string>

    <string name="app_name">Securify</string>
    <string name="LoginActivity_Email">Email</string>
    <string name="LoginActivity_password">Password</string>
    <string name="LoginActivity_login">Login</string>
    <string name="LoginActivity_Quest">Not Signed up ?</string>
    <string name="LoginActivity_Register">Register</string>
    <string name="LoginActivity_ForgotPass">Forgotten Password ?</string>
    <string name="LoginActivity_RecoverPass">Reset</string>

    <string name="RegisterActivity_ConfirmPass">Confirm Password</string>
    <string name="RegsiterActivity_RoleText">Role</string>
    <string name="RegsiterActivity_ManagerText">Manager</string>
    <string name="RegsiterActivity_TechnicianText">Technician</string>
    <string name="RegsiterActivity_PhoneText">Phone Number</string>
    <string name="RegsiterActivity_FirstName">First Name</string>
    <string name="RegsiterActivity_LastName">Last Name</string>

    <string name="RequestActivity_Home">Request Technician</string>

    <string name="RequestTechnicianNAME">Name</string>
    <string name="RequestTechnicianESTIMATION">ETA</string>

    <string name="RequestPOPUP_Confirm">Confirm</string>
    <string name="RequestPOPUP_Decline">Decline</string>

    <string-array name="RoleDropdown">
        <item>Manager</item>
        <item>Technician</item>
    </string-array>

    <!-- StartView Specific -->
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>

    <!-- Navigation Drawer specific -->
    <string name="nav_home">Home</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_monitor_tech">Monitor Technician</string>
    <string name="nav_monitor_car">Monitor Job</string>
    <string name="nav_register_car">Register Job</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_reset_pass">Reset Password</string>
    <string name="nav_logout">Logout</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Monitor Technicians</item>
        <item>Monitor Job</item>
        <item>Report Job</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Register Car Specific -->
    <string name="CarPromptPhoto">Take Photo Of The Job</string>
    <string name="CarNickName">Job Nick Name</string>
    <string name="RegistrationPlate">Registration Plate</string>
    <string name="TimeLastServiced">Estimated Repair Value</string>
    <string name="Description">Description</string>

    <!-- Take Picture Specific -->
    <string name="btnTakePicture">Capture Image</string>
    <string name="btnRecordVideo">Record Video</string>
    <string name="or">(or)</string>
    <string name="btnUploadToServer">Upload to Server</string>
    <string name="universal_submit">Submit</string>

    <!--
    <string name="userEmailLoggedIn"/>
    <string name="userIdLoggedIn" />
    <string name="userFnameLoggedIn" />
    <string name="userLnameLoggedIn" />
    <string name="phoneLoggedIn" />
    <string name="passHashedLoggedIn" />
    <string name="passRoleLoggedIn" />
    -->

    <string name="userEmailLoggedIn"> userEmailLoggedIn </string>
    <string name="userIdLoggedIn"> userIdLoggedIn </string>
    <string name="userFnameLoggedIn"> userFnameLoggedIn </string>
    <string name="userLnameLoggedIn"> userLnameLoggedIn </string>
    <string name="phoneLoggedIn"> phoneLoggedIn </string>
    <string name="passHashedLoggedIn"> passHashedLoggedIn</string>
    <string name="passRoleLoggedIn"> passRoleLoggedIn</string>
    <string name="RequestTechnicianDistance">Distance</string>

</resources>
