<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_monitor_tech"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_monitor_tech" />
        <item
            android:id="@+id/nav_monitor_car"
            android:icon="@drawable/ic_car_black_48dp"
            android:title="@string/nav_monitor_car" />
        <item
            android:id="@+id/nav_register_car"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/nav_register_car" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>