<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.farmate.securifybeta.activity.LoginActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/SecurifyIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@mipmap/securify_logo" />

            <TextView
                android:id="@+id/Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/loginButton"
                android:layout_alignParentStart="true"
                android:layout_weight="1"
                android:hint="@string/LoginActivity_login"
                android:text="@string/LoginActivity_Email"
                tools:layout_editor_absoluteX="208dp"
                tools:layout_editor_absoluteY="109dp" />

            <EditText
                android:id="@+id/inputCarNickName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/LoginActivity_Email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/LoginActivity_password" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/inputCarNickName"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/LoginActivity_password"
                android:inputType="textPassword"
                android:textColorHint="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputCarNickName"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:text="@string/LoginActivity_login"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/textViewForgottenPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/login_pad_dp"
                android:text="@string/LoginActivity_ForgotPass"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp"
                tools:padding="8dp" />

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/LoginActivity_RecoverPass" />

            <TextView
                android:id="@+id/textViewNotSignedUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/login_pad_dp"
                android:text="@string/LoginActivity_Quest"
                tools:padding="8dp" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/LoginActivity_Register" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
