<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.farmate.securifybeta.activity.RegisterActivity">

    <TableRow
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/SecurifyIcon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/Login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/loginButton"
                    android:layout_alignParentStart="true"
                    android:layout_weight="1"
                    android:hint="@string/LoginActivity_login"
                    android:text="@string/LoginActivity_Email"
                    tools:layout_editor_absoluteX="208dp"
                    tools:layout_editor_absoluteY="109dp" />

                <EditText
                    android:id="@+id/inputemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/LoginActivity_Email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/colorPrimaryDark"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="0dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/firstNameText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/RegsiterActivity_FirstName" />

                    <TextView
                        android:id="@+id/lastNameText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/RegsiterActivity_LastName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/inputFirstName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/RegsiterActivity_FirstName"
                        android:inputType="textPersonName"
                        android:textColorHint="@color/colorPrimaryDark" />

                    <EditText
                        android:id="@+id/inputLastName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/RegsiterActivity_LastName"
                        android:inputType="textPersonName"
                        android:textColorHint="@color/colorPrimaryDark" />

                </LinearLayout>

                <TextView
                    android:id="@+id/RoleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/loginButton"
                    android:layout_alignParentStart="true"
                    android:layout_weight="1"
                    android:hint="@string/LoginActivity_login"
                    android:text="@string/RegsiterActivity_RoleText"
                    tools:layout_editor_absoluteX="208dp"
                    tools:layout_editor_absoluteY="109dp" />

                <Spinner
                    android:id="@+id/spinnerRole"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clipToPadding="false"
                    android:padding="@dimen/login_pad_dp"
                    android:spinnerMode="dialog" />

                <TextView
                    android:id="@+id/phoneText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/loginButton"
                    android:layout_alignParentStart="true"
                    android:layout_weight="1"
                    android:hint="@string/LoginActivity_login"
                    android:text="@string/RegsiterActivity_PhoneText"
                    tools:layout_editor_absoluteX="208dp"
                    tools:layout_editor_absoluteY="109dp" />

                <EditText
                    android:id="@+id/inputPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/RegsiterActivity_PhoneText"
                    android:inputType="phone"
                    android:textColorHint="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/passwordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/LoginActivity_password" />

                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/inputemail"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/LoginActivity_password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorPrimaryDark"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="0dp" />

                <TextView
                    android:id="@+id/confirmPasswordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/RegisterActivity_ConfirmPass" />

                <EditText
                    android:id="@+id/inputConfirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/inputemail"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/RegisterActivity_ConfirmPass"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorPrimaryDark"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="0dp" />

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/LoginActivity_Register" />

            </LinearLayout>
        </ScrollView>

    </TableRow>
</android.support.constraint.ConstraintLayout>
