<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="org.farmate.securifybeta.fragment.dialogRequestFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/securifyLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:srcCompat="@mipmap/securify_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/album_title_padding">

                <fragment
                    android:id="@+id/dialogMapFragment"
                    class="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/album_title_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nameInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/RequestTechnicianNAME" />

                    <TextView
                        android:id="@+id/FirstLastNameTechnician"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/etaInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/RequestTechnicianESTIMATION" />

                    <TextView
                        android:id="@+id/Estimation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/phoneInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/RegsiterActivity_PhoneText" />

                    <TextView
                        android:id="@+id/PhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textSize="24sp" />

                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonDeclineRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/album_title_padding"
                android:text="@string/RequestPOPUP_Decline" />

            <Button
                android:id="@+id/buttonAcceptRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/album_title_padding"
                android:text="@string/RequestPOPUP_Confirm" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
